// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getXvsWithdrawableAmount > returns the withdrawable amount on success 1`] = `
{
  "totalVestedAmount": "1000",
  "totalWithdrawableAmount": "500000",
  "totalWithdrawnAmount": "0",
}
`;

exports[`api/queries/getXvsWithdrawableAmount returns the withdrawable amount on success 1`] = `
Object {
  "totalVestedAmount": "1000",
  "totalWithdrawableAmount": "500000",
  "totalWithdrawnAmount": "0",
}
`;
